feat: add login/logout routes and makefile

--- a/internal/store/pgstore/migrations/tern.conf
+++ b/internal/store/pgstore/migrations/tern.conf
@@ -1,6 +1,6 @@
 [database]
-port = {{env "ACTION_HOUSE_DB_PORT"}}
-database = {{env "ACTION_HOUSE_DB_NAME"}}
-user = {{env "ACTION_HOUSE_DB_USER"}}
-password = {{env "ACTION_HOUSE_DB_PASSWORD"}}
-host = {{env "ACTION_HOUSE_DB_HOST"}}
+port = {{env "AUCTION_HOUSE_DB_PORT"}}
+database = {{env "AUCTION_HOUSE_DB_NAME"}}
+user = {{env "AUCTION_HOUSE_DB_USER"}}
+password = {{env "AUCTION_HOUSE_DB_PASSWORD"}}
+host = {{env "AUCTION_HOUSE_DB_HOST"}}
